@@ -1,3 +1,14 @@
+2001-10-26  Pat Thoyts  <patthoyts@users.sourceforge.net>
+
+	* tkchat.tcl: Added a help dialog. Needs more help in it.
+	* tkchat.tcl: Implemented patch 474859 for script startup.
+	- Fixed bug 466011: rc file permissions to 0600.
+	- Implemented feature request 466221: optionally hiding user
+	entry/exit messages.
+	- Implemented part of feature request 466091 to remember window
+	geometry.
+
+
 2001-10-17  Pat Thoyts  <patthoyts@users.sourceforge.net>
 
 	* tkchat.tcl (updateNames): Fixed the missing All Users item for
